container background colour

--- a/album.html
+++ b/album.html
@@ -39,7 +39,7 @@
       </div>
     </div>
     <footer class="footer">
-        <h5> example is © Bootstrap, but please download and customize it for yourself!</h5>
+        <p> example is © Bootstrap, but please download and customize it for yourself!</p>
     </footer>
 </body>
 </html>
