--- a/album.html
+++ b/album.html
@@ -1,45 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Album</title>
-    <link type="text/css" rel="stylesheet" href="CSS/ini.css" />
-    <link type="text/css" rel="stylesheet" href="CSS/header.css" />
-    <link type="text/css" rel="stylesheet" href="CSS/container.css" />
-    <link type="text/css" rel="stylesheet" href="CSS/footer.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins&display=swap" rel="stylesheet">
-
-</head>
-<body>
-    <header class="header">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" 
-             height="20" fill="none" stroke="currentColor" 
-              stroke-linecap="round" stroke-linejoin="round" 
-              stroke-width="2" aria-hidden="true"  viewBox="0 0 24 24">
-              <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
-              <circle cx="12" cy="13" r="4"></circle>
-        </svg>
-     <strong> 
-         Album </strong> 
+    <link type="text/css" rel="stylesheet" href="CSS/album.css" />
+  </head>
+  <body>
+    <header class="album-header">
+      <strong> Album </strong>
     </header>
-    <div class="container">
+    <div class="album-container">
       <div>Album example</div>
       <div>
-         <div>Thumbail</div> 
-         <p>This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-         <div>
-             <button>view</button>
-             <button>edit</button>
-             <small>9 mins</small>
-         </div>
+        <div>Thumbail</div>
+        <p>
+          This is a wider card with supporting text below as a natural lead-in
+          to additional content. This content is a little bit longer.
+        </p>
+        <div>
+          <button>view</button>
+          <button>edit</button>
+          <small>9 mins</small>
+        </div>
       </div>
     </div>
-    <footer class="footer">
-        <p> example is © Bootstrap, but please download and customize it for yourself!</p>
+    <footer class="album-footer">
+      <p>
+        example is © Bootstrap, but please download and customize it for
+        yourself!
+      </p>
     </footer>
-</body>
+  </body>
 </html>
